--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "cross-env BIZ_ENV=local nest start --debug --watch",
+    "start:dev": "cross-env BIZ_ENV=dev npm run build && cross-env BIZ_ENV=dev node dist/main",
+    "start:test": "cross-env BIZ_ENV=test npm run build && cross-env BIZ_ENV=test node dist/main",
+    "start:prod": "cross-env BIZ_ENV=prod npm run build && cross-env BIZ_ENV=prod node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,35 +20,21 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "dependencies": {
-    "@nestjs/common": "^7.4.4",
-    "@nestjs/core": "^7.4.4",
-    "@nestjs/platform-express": "^7.4.4",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+  "gitHooks": {
+    "pre-commit": "lint-staged"
   },
-  "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.2",
-    "@nestjs/testing": "^7.4.4",
-    "@types/express": "^4.17.8",
-    "@types/jest": "26.0.14",
-    "@types/node": "^14.10.3",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "4.1.1",
-    "@typescript-eslint/parser": "4.1.1",
-    "eslint": "7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "jest": "26.4.2",
-    "prettier": "^2.1.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "26.3.0",
-    "ts-loader": "^8.0.3",
-    "ts-node": "9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.2"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
@@ -63,5 +49,40 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "dependencies": {
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/platform-express": "^7.4.4",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.3"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@nestjs/cli": "^7.5.1",
+    "@nestjs/schematics": "^7.1.2",
+    "@nestjs/testing": "^7.4.4",
+    "@types/express": "^4.17.8",
+    "@types/jest": "26.0.14",
+    "@types/node": "^14.10.3",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "4.1.1",
+    "@typescript-eslint/parser": "4.1.1",
+    "cross-env": "^7.0.2",
+    "eslint": "7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "husky": "^4.3.0",
+    "jest": "26.4.2",
+    "prettier": "^2.1.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "26.3.0",
+    "ts-loader": "^8.0.3",
+    "ts-node": "9.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.0.2"
   }
 }
