--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,14 +3,14 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "start:dev",
-			"problemMatcher": [],
-			"label": "npm: start:dev",
-			"detail": "nest start --watch",
+			"script": "start",
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			}
+			},
+			"problemMatcher": [],
+			"label": "npm: start",
+			"detail": "cross-env BIZ_ENV=local nest start --debug --watch"
 		}
 	]
 }
