--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env BIZ_ENV=local nest start --debug --watch",
+    "start": "cross-env BIZ_ENV=local nest start --watch",
     "start:dev": "cross-env BIZ_ENV=dev npm run build && cross-env BIZ_ENV=dev node dist/main",
     "start:test": "cross-env BIZ_ENV=test npm run build && cross-env BIZ_ENV=test node dist/main",
     "start:prod": "cross-env BIZ_ENV=prod npm run build && cross-env BIZ_ENV=prod node dist/main",
