--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,13 @@
 		{
 			"type": "npm",
 			"script": "start",
+			"problemMatcher": [],
+			"label": "npm: start",
+			"detail": "cross-env BIZ_ENV=local nest start --watch",
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			},
-			"problemMatcher": [],
-			"label": "npm: start",
-			"detail": "cross-env BIZ_ENV=local nest start --debug --watch"
+			}
 		}
 	]
 }
