--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,19 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "type": "pwa-node",
       "request": "launch",
       "name": "start",
       "runtimeExecutable": "npm",
       "runtimeArgs": [
-        "start",
-        "debug"
+        "start"
       ],
-      "port": 9229,
       "skipFiles": [
         "<node_internals>/**"
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
       ]
     },
   ]
