--- a/package.json
+++ b/package.json
@@ -56,10 +56,15 @@
       "@nestjs/core": "^7.4.4",
       "@nestjs/platform-express": "^7.4.4",
       "@nestjs/typeorm": "^7.1.4",
-      "reflect-metadata": "^0.1.10",
+      "body-parser": "^1.19.0",
+      "compression": "^1.7.4",
+      "csurf": "^1.11.0",
+      "express": "^4.17.1",
+      "express-rate-limit": "^5.1.3",
+      "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
       "rxjs": "^6.6.3",
-      "sqlite3": "^4.0.3",
+      "sqlite3": "^5.0.0",
       "typeorm": "0.2.26"
    },
    "devDependencies": {
@@ -67,10 +72,11 @@
       "@commitlint/config-conventional": "^11.0.0",
       "@nestjs/cli": "^7.5.1",
       "@nestjs/schematics": "^7.1.2",
+      "@nestjs/swagger": "^4.6.0",
       "@nestjs/testing": "^7.4.4",
       "@types/express": "^4.17.8",
       "@types/jest": "26.0.14",
-      "@types/node": "^8.0.29",
+      "@types/node": "^14.11.1",
       "@types/supertest": "^2.0.10",
       "@typescript-eslint/eslint-plugin": "4.1.1",
       "@typescript-eslint/parser": "4.1.1",
@@ -83,6 +89,7 @@
       "jest": "26.4.2",
       "prettier": "^2.1.2",
       "supertest": "^4.0.2",
+      "swagger-ui-express": "^4.1.4",
       "ts-jest": "26.3.0",
       "ts-loader": "^8.0.3",
       "ts-node": "9.0.0",
