--- a/package.json
+++ b/package.json
@@ -6,19 +6,13 @@
    "private": true,
    "license": "UNLICENSED",
    "scripts": {
-      "prebuild": "rimraf dist",
-      "build": "nest build",
+      "serve": " ts-node-dev --respawn --transpile-only --clear --rs --cache-directory .cache src/main",
+      "start": "cross-env BIZ_ENV=local npm run serve",
+      "start:dev": "cross-env BIZ_ENV=dev npm run serve",
+      "start:test": "cross-env BIZ_ENV=test npm run serve",
+      "start:prod": "cross-env BIZ_ENV=prod npm run serve",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-      "start": "cross-env BIZ_ENV=local nest start --watch",
-      "start:dev": "cross-env BIZ_ENV=dev npm run build && cross-env BIZ_ENV=dev node dist/main",
-      "start:test": "cross-env BIZ_ENV=test npm run build && cross-env BIZ_ENV=test node dist/main",
-      "start:prod": "cross-env BIZ_ENV=prod npm run build && cross-env BIZ_ENV=prod node dist/main",
-      "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-      "test": "jest",
-      "test:watch": "jest --watch",
-      "test:cov": "jest --coverage",
-      "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-      "test:e2e": "jest --config ./test/jest-e2e.json"
+      "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
    },
    "gitHooks": {
       "pre-commit": "lint-staged"
@@ -36,20 +30,6 @@
          "prettier --parser=typescript --write"
       ]
    },
-   "jest": {
-      "moduleFileExtensions": [
-         "js",
-         "json",
-         "ts"
-      ],
-      "rootDir": "src",
-      "testRegex": ".spec.ts$",
-      "transform": {
-         "^.+\\.(t|j)s$": "ts-jest"
-      },
-      "coverageDirectory": "../coverage",
-      "testEnvironment": "node"
-   },
    "dependencies": {
       "@nestjs/common": "^7.4.4",
       "@nestjs/config": "^0.5.0",
@@ -58,42 +38,37 @@
       "@nestjs/typeorm": "^7.1.4",
       "body-parser": "^1.19.0",
       "compression": "^1.7.4",
-      "csurf": "^1.11.0",
       "express": "^4.17.1",
       "express-rate-limit": "^5.1.3",
       "reflect-metadata": "^0.1.13",
-      "rimraf": "^3.0.2",
-      "rxjs": "^6.6.3",
       "sqlite3": "^5.0.0",
-      "typeorm": "0.2.26"
+      "typeorm": "0.2.28"
    },
    "devDependencies": {
       "@commitlint/cli": "^11.0.0",
       "@commitlint/config-conventional": "^11.0.0",
       "@nestjs/cli": "^7.5.1",
       "@nestjs/schematics": "^7.1.2",
-      "@nestjs/swagger": "^4.6.0",
+      "@nestjs/swagger": "^4.6.1",
       "@nestjs/testing": "^7.4.4",
       "@types/express": "^4.17.8",
-      "@types/jest": "26.0.14",
-      "@types/node": "^14.11.1",
+      "@types/node": "^14.11.8",
       "@types/supertest": "^2.0.10",
-      "@typescript-eslint/eslint-plugin": "4.1.1",
-      "@typescript-eslint/parser": "4.1.1",
+      "@typescript-eslint/eslint-plugin": "4.4.0",
+      "@typescript-eslint/parser": "4.4.0",
       "cross-env": "^7.0.2",
-      "eslint": "7.9.0",
+      "eslint": "7.11.0",
       "eslint-config-alloy": "^3.8.0",
-      "eslint-config-prettier": "^6.11.0",
-      "eslint-plugin-import": "^2.22.0",
+      "eslint-config-prettier": "^6.12.0",
+      "eslint-plugin-import": "^2.22.1",
       "husky": "^4.3.0",
-      "jest": "26.4.2",
       "prettier": "^2.1.2",
-      "supertest": "^4.0.2",
+      "rimraf": "^3.0.2",
+      "supertest": "^5.0.0",
       "swagger-ui-express": "^4.1.4",
-      "ts-jest": "26.3.0",
-      "ts-loader": "^8.0.3",
-      "ts-node": "9.0.0",
+      "ts-loader": "^8.0.4",
+      "ts-node-dev": "^1.0.0-pre.63",
       "tsconfig-paths": "^3.9.0",
-      "typescript": "4.0.2"
+      "typescript": "4.0.3"
    }
 }
