--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
       "@nestjs/common": "^7.4.4",
       "@nestjs/config": "^0.5.0",
       "@nestjs/core": "^7.4.4",
+      "@nestjs/passport": "^7.1.0",
       "@nestjs/platform-express": "^7.4.4",
       "@nestjs/typeorm": "^7.1.4",
       "body-parser": "^1.19.0",
       "compression": "^1.7.4",
       "express": "^4.17.1",
       "express-rate-limit": "^5.1.3",
+      "passport": "^0.4.1",
+      "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.13",
       "sqlite3": "^5.0.0",
       "typeorm": "0.2.28"
@@ -53,6 +56,7 @@
       "@nestjs/testing": "^7.4.4",
       "@types/express": "^4.17.8",
       "@types/node": "^14.11.8",
+      "@types/passport-local": "^1.0.33",
       "@types/supertest": "^2.0.10",
       "@typescript-eslint/eslint-plugin": "4.4.0",
       "@typescript-eslint/parser": "4.4.0",
